--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore Mac system files
 .DS_store
 
-# Ignore python cache folder
-code/__pycache__/*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
